--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>Page Title</title>
+<title>My Design portfolio</title>
 </head>
 <body>
 
-<h1>SAMOSA</h1>
-<p>This is tasty</p>
+<h1>Communication design</h1>
+<A  HREF= "NEW 1.HTML">Animation and Graphics projects </A>
 
 </body>
 </html>
