--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 <h1>Communication design</h1>
-<A  HREF= "NEW 1.HTML">Animation and Graphics projects </A>
+<A  HREF= "new.HTML">Animation and Graphics projects </A>
 
 </body>
 </html>
