--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 <h1>Communication design</h1>
-<A  href= "new.HTML">Animation and Graphics projects> </A>
+<A  href= "new.html">Animation and Graphics projects> </A>
 
 </body>
 </html>
