--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 <h1>Communication design</h1>
-<a href="new.html">Animation and Graphics projects </a>
+<a href="new1.html">Animation and Graphics projects </a>
 
 </body>
 </html>
