--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 <title>My Design portfolio</title>
 </head>
-<body>
-
-<h1>Communication design</h1>
-<a href="new1.html">Animation and Graphics projects </a>
-
+<body style="background-color:black;">
+<h1 style="color:white;">Communication design</h1>
+<a href="new1.html";style=color:yellow";>Animation and Graphics projects </a>
+<p style="color:red;">Communication design is a mixed discipline between design and information development which is concerned with how media intervention such as printed, crefted or presentation communicate with people.</p>
 </body>
 </html>
+
