--- a/WEB.html
+++ b/WEB.html
@@ -8,7 +8,7 @@
 <p style="color:black;font-family:times roman;text-align:center;font-size:200%;">Use Wix Artificial Design intelligence</p>
 <p style="color:black;font-family:times roman;text-align:center;font-size:200%;">to help you create your stunning website</p>
 <p style="text-align:center;"><a href="new1.html">Start with Wix editor</a></p>
-<img img-align:center; src="lol.png">
+<img src="12.jpg" width="30%" height="50%" align:center>
 
 </body>
 </html>
