--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
 <title>My Design portfolio</title>
 </head>
-<body style="background-color:black;">
-<h1 style="color:white;">Communication design</h1>
-<a href="new1.html";style=color:yellow";>Animation and Graphics projects </a>
-<p style="color:red;">Communication design is a mixed discipline between design and information development which is concerned with how media intervention such as printed, crefted or presentation communicate with people.</p>
+<body style="background-color:white;">
+<h1 style="color:black;font-size=800%;">WIX</h1>
+<p style="color:black;font-family:courier;text-align:center;font-size:400%;">Create your website with Wix ADI</p>
+<p style="color:black;font-family:times roman;text-align:center;font-size:200%;">Use Wix Artificial Design intelligence</p>
+<p style="color:black;font-family:times roman;text-align:center;font-size:200%;">to help you create your stunning website</p>
+<p style="text-align:center;"><a href="new1.html">Start with Wix editor</a></p>
+<img src="12.jpg" width="30%" height="50%" align:center>
+
 </body>
 </html>
-
