--- a/index.html
+++ b/index.html
@@ -1,14 +1,97 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>My Design portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color:white;">
-<h1 style="color:black;font-size=800%;">WIX</h1>
-<p style="color:black;font-family:courier;text-align:center;font-size:400%;">Create your website with Wix ADI</p>
-<p style="color:black;font-family:times roman;text-align:center;font-size:200%;">Use Wix Artificial Design intelligence</p>
-<p style="color:black;font-family:times roman;text-align:center;font-size:200%;">to help you create your stunning website</p>
-<p style="text-align:center;"><a href="new1.html">Start with Wix editor</a></p>
-<img src="12.jpg" width="30%" height="50%" align:center>
+<body>
 
+<div class="grid">
+
+  <div class="one">
+    <br>
+<center><p>A brilliant design</p>
+  <center><p>portfolio.</p>
+  </div>
+
+  <div class="two">
+    <br>
+<center><p2>MY NAME IS SHRUTI JAIN</p2>
+  <br>
+<p3>COMMUNICATION DESIGN</p3>
+  </div>
+
+  <div class="three">
+<p>Categories</p>
+  </div>
+
+  <div class="four">
+    <style>
+    a {
+      color: white;
+    }
+    a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+</style>
+<p><a href="default.asp" target="white">Animation</a></p>
+<p><a href="default.asp" target="white">Fashion Communication</a></p>
+<p><a href="default.asp" target="white">Graphic Design</a></p>
+<p><a href="default.asp" target="white">Film Making</a></p><br>
+<p1>About me:</p1><br>
+<p><a href="default.asp" target="white">Contact</a></p><br>
+<p1>Social</p1><br>
+<br>
+
+<a href="default.asp" target="white"><img src="twitter.png" alt="twitter" width="40" height="40"></a>
+<a href="https://www.behance.net/shrutijain5a56" target="white"><img src="behance.png" alt="behance" width="40" height="40"></a>
+<a href="default.asp" target="white"><img src="Instagram-512.png" alt="Instagram" width="40" height="40"></a>
+<a href="default.asp" target="white"><img src="fb.png" alt="fb" width="40" height="40"></a>
+  </div>
+  <div class="five">
+
+  </div>
+  <div class="six">
+<img src="001.jpeg" alt="shruti" width="300" height="250">
+  </div>
+<div class="seven">
+  </div>
+  <div class="eight">
+<p4>NAME                  :                SHRUTI JAIN</p4>
+  <br>
+    <br>
+      <br>
+  <p4>AGE                  :                19 YEARS</p4>
+    <br>
+      <br>
+        <br>
+  <p4>EDUCATION                   :                PES UNIVERSITY</p4>
+
+  </div>
+  <div class="nine">
+<center><p7>"WE CAN NOT SOLVE OUR PROBLEM WITH THE SAME THINKING WE USED TO CREATE THEM"</p7>
+  <BR>
+    <BR>
+
+  <p8>~ALBERT EINSTEIN</p8>
+  </div>
+  <div class="ten">
+
+  </div>
+  <div class="eleven">
+
+  </div>
+
+  <div class="twelve">
+
+  </div>
+  <div class="thirteen">
+13
+  </div>
+</div>
 </body>
 </html>
