--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 
   <div class="one">
     <br>
-<center><p>A brilliant design</p>
+  <center><p>A brilliant design</p>
   <center><p>portfolio.</p>
   </div>
 
   <div class="two">
     <br>
-<center><p2>MY NAME IS SHRUTI JAIN</p2>
+  <center><p2>MY NAME IS SHRUTI JAIN</p2>
   <br>
-<p3>COMMUNICATION DESIGN</p3>
+  <p3>COMMUNICATION DESIGN</p3>
   </div>
 
   <div class="three">
 <p>Categories</p>
   </div>
-
   <div class="four">
     <style>
     a {
@@ -32,25 +31,42 @@
     }
     a:link {
   text-decoration: none;
-}
+  }
 
-a:visited {
+  a:visited {
   text-decoration: none;
-}
-</style>
-<p><a href="default.asp" target="white">Animation</a></p>
-<p><a href="default.asp" target="white">Fashion Communication</a></p>
-<p><a href="default.asp" target="white">Graphic Design</a></p>
-<p><a href="default.asp" target="white">Film Making</a></p><br>
-<p1>About me:</p1><br>
-<p><a href="default.asp" target="white">Contact</a></p><br>
-<p1>Social</p1><br>
-<br>
+  }
+  </style>
+  <p><a href="default.asp" target="white">Animation</a></p>
+  <br>
 
-<a href="default.asp" target="white"><img src="twitter.png" alt="twitter" width="40" height="40"></a>
-<a href="https://www.behance.net/shrutijain5a56" target="white"><img src="behance.png" alt="behance" width="40" height="40"></a>
-<a href="default.asp" target="white"><img src="Instagram-512.png" alt="Instagram" width="40" height="40"></a>
-<a href="default.asp" target="white"><img src="fb.png" alt="fb" width="40" height="40"></a>
+  <p><a href="default.asp" target="white">Fashion Communication</a></p>
+  <br>
+
+  <p><a href="default.asp" target="white">Graphic Design</a></p>
+  <br>
+
+  <p><a href="default.asp" target="white">Film Making</a></p><br>
+  <br>
+
+  <br>
+  <br>
+  <BR>
+    <BR>
+
+  <p1>About me:</p1><br>
+  <br>
+
+  <p><a href="default.asp" target="white">Contact</a></p><br>
+  <br>
+  <br>
+<BR>
+  <BR>
+
+  <p1>Social</p1><br>
+  <br>
+
+
   </div>
   <div class="five">
 
@@ -58,40 +74,63 @@ a:visited {
   <div class="six">
 <img src="001.jpeg" alt="shruti" width="300" height="250">
   </div>
-<div class="seven">
+
+
+  <div class="seven">
+
   </div>
   <div class="eight">
-<p4>NAME                  :                SHRUTI JAIN</p4>
-  <br>
     <br>
-      <br>
-  <p4>AGE                  :                19 YEARS</p4>
-    <br>
+    <p4>NAME                  :                SHRUTI JAIN</p4>
       <br>
         <br>
-  <p4>EDUCATION                   :                PES UNIVERSITY</p4>
-
+          <br>
+      <p4>AGE                  :                19 YEARS</p4>
+        <br>
+          <br>
+            <br>
+      <p4>EDUCATION                   :            PES UNIVERSITY</p4>
+      <br>
+      <br>
   </div>
   <div class="nine">
-<center><p7>"WE CAN NOT SOLVE OUR PROBLEM WITH THE SAME THINKING WE USED TO CREATE THEM"</p7>
-  <BR>
-    <BR>
-
-  <p8>~ALBERT EINSTEIN</p8>
   </div>
   <div class="ten">
+    <BR>
+      <BR>
+    <center><p7>"WE CAN NOT SOLVE OUR PROBLEM WITH THE SAME THINKING WE USED TO CREATE THEM"</p7>
+      <BR>
+        <BR>
 
+      <p8>~ALBERT EINSTEIN</p8>
   </div>
   <div class="eleven">
-
+<p9>DESIGN SKILLS</p9>
   </div>
-
   <div class="twelve">
-
+    <br>
+    <a href="default.asp" target="white"><img src="twitter.png" alt="twitter" width="30" height="30"></a>
+    <a href="https://www.behance.net/shrutijain5a56" target="white"><img src="behance.png" alt="behance" width="30" height="30"></a>
+    <a href="https://www.instagram.com/art_4.grace/" target="white"><img src="Instagram-512.png" alt="Instagram" width="30" height="30"></a>
+    <a href="https://www.facebook.com/shrutijainlin" target="white"><img src="fb.png" alt="fb" width="30" height="30"></a>
   </div>
   <div class="thirteen">
-13
+<br>
+<br>
+<img src="a.png" alt="fb" width="200" height="70"><br>
   </div>
-</div>
+  <div class="fourteen">
+
+    <div>ANIMATION</div>
+    <br>
+    <h1>FASHION COMMUNICATION</h1>
+    <br>
+    <h2>GRAPHIC DESIGN</h2>
+    <BR>
+      <h3>FILM MAKING</h3>
+
+  </div>
+
+
 </body>
 </html>
