--- a/index.html
+++ b/index.html
@@ -25,45 +25,32 @@
 <p>Categories</p>
   </div>
   <div class="four">
-    <style>
-    a {
-      color: white;
-    }
-    a:link {
-  text-decoration: none;
-  }
 
-  a:visited {
-  text-decoration: none;
-  }
-  </style>
-  <p><a href="default.asp" target="white">Animation</a></p>
-  <br>
+  <a href="default.asp" target="white"><p>Animation</p></a>
 
-  <p><a href="default.asp" target="white">Fashion Communication</a></p>
-  <br>
 
-  <p><a href="default.asp" target="white">Graphic Design</a></p>
-  <br>
 
-  <p><a href="default.asp" target="white">Film Making</a></p><br>
-  <br>
+  <a href="default.asp" target="white"><p>Fashion Communication</p></a>
 
-  <br>
-  <br>
-  <BR>
-    <BR>
 
-  <p1>About me:</p1><br>
-  <br>
+  <a href="default.asp" target="white"><p>Graphic Design</p></a>
 
-  <p><a href="default.asp" target="white">Contact</a></p><br>
-  <br>
-  <br>
-<BR>
-  <BR>
 
-  <p1>Social</p1><br>
+  <a href="default.asp" target="white"><p>Film Making</p></a>
+
+
+    <a href="default.asp" target="white"><p>Web Design and Development</p></a><br>
+
+
+
+
+  <a><h1>About me:</h1></a>
+
+  <a href="default.asp" target="white" ><p height="70px">Contact</p></a><br>
+
+
+
+    <a><h1>Social</h1></a>
   <br>
 
 
@@ -72,7 +59,7 @@
 
   </div>
   <div class="six">
-<img src="001.jpeg" alt="shruti" width="300" height="250">
+<img src="001.jpeg" alt="shruti" width="100%" >
   </div>
 
 
@@ -109,15 +96,17 @@
   </div>
   <div class="twelve">
     <br>
-    <a href="default.asp" target="white"><img src="twitter.png" alt="twitter" width="30" height="30"></a>
-    <a href="https://www.behance.net/shrutijain5a56" target="white"><img src="behance.png" alt="behance" width="30" height="30"></a>
-    <a href="https://www.instagram.com/art_4.grace/" target="white"><img src="Instagram-512.png" alt="Instagram" width="30" height="30"></a>
-    <a href="https://www.facebook.com/shrutijainlin" target="white"><img src="fb.png" alt="fb" width="30" height="30"></a>
+    <br>
+
+    <a href="default.asp" target="white"><img src="twitter.png" alt="twitter" width="50" height="50"></a>
+    <a href="https://www.behance.net/shrutijain5a56" target="white"><img src="behance.png" alt="behance" width="50" height="50"></a>
+    <a href="https://www.instagram.com/art_4.grace/" target="white"><img src="Instagram-512.png" alt="Instagram" width="50" height="50"></a>
+    <a href="https://www.facebook.com/shrutijainlin" target="white"><img src="fb.png" alt="fb" width="50" height="50"></a>
   </div>
   <div class="thirteen">
 <br>
 <br>
-<img src="a.png" alt="fb" width="200" height="70"><br>
+<img src="a.png" alt="fb" width="300" height="100"><br>
   </div>
   <div class="fourteen">
 
